<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundopreto"
    tools:context="com.example.gui.tp.excluirEcompartilhar">


    <TextView
        android:id="@+id/textDiretor"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:text="@string/mensagemParaProfessor"
        android:textColor="#00FF00"
        android:textSize="17dp" />

    <TextView
        android:id="@+id/matrix"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/compartilhar"
        android:layout_alignEnd="@+id/compartilhar"
        android:layout_marginBottom="13dp"
        android:layout_marginEnd="11dp"
        android:text="@string/matrix"
        android:textColor="#00FF00"
        android:textSize="17dp" />


    <Button
        android:id="@+id/excluir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        android:background="#565656"
        android:text="@string/botaoexcluir"
        android:textColor="#00FF00"
        android:textSize="35dp"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="399dp" />

    <Button
        android:id="@+id/compartilhar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/excluir"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="44dp"
        android:background="#565656"
        android:text="@string/botaocompartilhar"
        android:textColor="#00FF00"
        android:textSize="35dp"
        tools:layout_editor_absoluteX="127dp"
        tools:layout_editor_absoluteY="308dp" />

</RelativeLayout>
